--- a/Lyyneheym/Lyyneheym/MainWindow.xaml
+++ b/Lyyneheym/Lyyneheym/MainWindow.xaml
@@ -1,8 +1,23 @@
 ﻿<Window x:Class="Lyyneheym.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow" Height="576" Width="1024" ResizeMode="NoResize" MouseRightButtonDown="Window_MouseRightButtonDown">
+    <Grid Name="BO_MainGrid">
+        <Image Name="BO_MessageBoxLayer" Opacity="0.75" Panel.ZIndex="91" Height="170" VerticalAlignment="Bottom" Width="1018" Stretch="UniformToFill" Source="ImageAssets/originMessageBox2.png"/>
+        <TextBlock x:Name="BO_MainName" HorizontalAlignment="Left" Panel.ZIndex="92" Margin="35,0,0,105" TextWrapping="Wrap" VerticalAlignment="Bottom" FontSize="24" Width="300" FontFamily="FZXiaoBiaoSong-B05" LineHeight="36" LineStackingStrategy="BlockLineHeight" Height="30"><Run Language="zh-cn" Text="春日野穹"/></TextBlock>
+        <TextBlock x:Name="BO_MainText" HorizontalAlignment="Left" Panel.ZIndex="93" Margin="75,0,0,8" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="933" Height="91" LineHeight="22" FontSize="15" TextDecorations="{x:Null}" FontFamily="FZXiaoBiaoSong-B05" LineStackingStrategy="BlockLineHeight"><Run Language="zh-cn" Text="这是一个测试语句块，她很可爱"/><LineBreak/><Run Language="zh-cn" Text="哎呀呀，喜欢的果然是依媛奈绪姐姐呢"/><LineBreak/><Run Language="zh-cn" Text="穹妹穹妹"/><LineBreak/><Run Language="zh-cn" Text="Sora Cyan"/></TextBlock>
+
+        <Image Name="BO_LeftChara" HorizontalAlignment="Left" Height="515" VerticalAlignment="Bottom" Width="500" Margin="10,0,0,0" Stretch="None"/>
+        <Image Name="BO_RightChara" HorizontalAlignment="Right" Height="515" VerticalAlignment="Bottom" Width="500" Margin="0,0,10,0" Stretch="None"/>
+
+
+        <Button Content="Button" HorizontalAlignment="Left" Margin="933,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="10,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_1"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="90,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_2"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="170,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_3"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="287,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_4"/>
+        <Button Content="Button" HorizontalAlignment="Left" Margin="367,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_5"/>
+
+
     </Grid>
 </Window>
