--- a/Lyyneheym/Lyyneheym/MainWindow.xaml
+++ b/Lyyneheym/Lyyneheym/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="Lyyneheym.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="576" Width="1024" ResizeMode="NoResize" MouseRightButtonDown="Window_MouseRightButtonDown">
+        Title="MainWindow" Height="576" Width="1024" ResizeMode="NoResize" MouseDown="Window_MouseDown" MouseUp="Window_MouseUp">
     <Canvas Name="BO_MainGrid">
         <Image Name="BO_MessageBoxLayer" Opacity="0.75" Panel.ZIndex="91" Height="170" VerticalAlignment="Bottom" Width="1018" Stretch="UniformToFill" Source="ImageAssets/originMessageBox2.png" Canvas.Top="377"/>
         <TextBlock x:Name="BO_MainName" HorizontalAlignment="Left" Panel.ZIndex="92" TextWrapping="Wrap" VerticalAlignment="Bottom" FontSize="22" Width="300" FontFamily="FZXiaoBiaoSong-B05" LineHeight="36" LineStackingStrategy="BlockLineHeight" Height="30" Canvas.Left="35" Canvas.Top="411"><Run Language="zh-cn" Text="春日野穹"/></TextBlock>
@@ -22,7 +22,7 @@
         <Button Content="Button" HorizontalAlignment="Left" Margin="594,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_7"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="674,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_8"/>
         <Button Content="Button" HorizontalAlignment="Left" Margin="754,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_9"/>
-        <Image Name="mytestbutton" Height="227" Canvas.Left="459" Canvas.Top="96" Width="229" Source="ImageAssets/MessageTria.png" MouseDown="Image_MouseDown"/>
+        <Image Name="mytestbutton" Height="20" Canvas.Left="405" Canvas.Top="61" Width="25" Source="ImageAssets/MessageTria.png" MouseDown="Image_MouseDown"/>
         <Button Content="Button" Canvas.Left="933" Canvas.Top="32" Width="75" Click="Button_Click_10"/>
 
 
