--- a/Lyyneheym/Lyyneheym/MainWindow.xaml
+++ b/Lyyneheym/Lyyneheym/MainWindow.xaml
@@ -24,6 +24,8 @@
         <Button Content="Button" HorizontalAlignment="Left" Margin="754,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_9"/>
         <Image Name="mytestbutton" Height="20" Canvas.Left="405" Canvas.Top="61" Width="25" Source="ImageAssets/MessageTria.png" MouseDown="Image_MouseDown"/>
         <Button Content="Button" Canvas.Left="933" Canvas.Top="32" Width="75" Click="Button_Click_10"/>
+        <Button Content="Button" Canvas.Left="933" Canvas.Top="61" Width="75" Click="Button_Click_11"/>
+        <Button Content="Button" Canvas.Left="933" Canvas.Top="88" Width="75" Click="Button_Click_12"/>
 
 
 
