--- a/Lyyneheym/Lyyneheym/MainWindow.xaml
+++ b/Lyyneheym/Lyyneheym/MainWindow.xaml
@@ -8,7 +8,7 @@
         <TextBlock x:Name="BO_MainText" HorizontalAlignment="Left" Panel.ZIndex="93" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="935" Height="91" LineHeight="22" FontSize="16" TextDecorations="{x:Null}" FontFamily="FZXiaoBiaoSong-B05" LineStackingStrategy="BlockLineHeight" Canvas.Left="60" Canvas.Top="446"><Run Language="zh-cn" Text="这是一个测试语句块，她很可爱"/><LineBreak/><Run Language="zh-cn" Text="非常长的测试用例句子就是这句话啦啊哈哈哈哈　あけみほうむら"/><LineBreak/><Run Language="zh-cn" Text="穹妹穹妹"/><LineBreak/><Run Language="zh-cn" Text="Sora Cyan"/></TextBlock>
         <Image Name="BO_MsgTria" Panel.ZIndex="999" Visibility="Hidden" Opacity="0.55" Height="20" Width="20" Canvas.Left="950" Canvas.Top="496" Source="ImageAssets/MessageTria.png"/>
 
-        <Image Name="BO_LeftChara" HorizontalAlignment="Left" Height="515" VerticalAlignment="Bottom" Width="500" Stretch="None" Canvas.Left="10" Canvas.Top="32"/>
+        <Image Name="BO_LeftChara" HorizontalAlignment="Left" Height="515" VerticalAlignment="Bottom" Width="500" Stretch="None" Canvas.Left="10" Canvas.Top="32" MouseEnter="BO_LeftChara_MouseEnter" MouseLeave="BO_LeftChara_MouseLeave" MouseDown="BO_LeftChara_MouseDown" MouseUp="BO_LeftChara_MouseUp"/>
         <Image Name="BO_RightChara" HorizontalAlignment="Right" Height="515" VerticalAlignment="Bottom" Width="500" Stretch="None" Canvas.Left="508" Canvas.Top="32"/>
 
 
