--- a/Lyyneheym/Lyyneheym/MainWindow.xaml
+++ b/Lyyneheym/Lyyneheym/MainWindow.xaml
@@ -7,7 +7,7 @@
             <Image Name="BO_MessageBoxLayer" Opacity="0.75" Panel.ZIndex="91" Height="170" VerticalAlignment="Bottom" Width="1024" Stretch="UniformToFill" Source="ImageAssets/originMessageBox2.png" Canvas.Top="406"/>
             <TextBlock x:Name="BO_MainName" HorizontalAlignment="Left" Panel.ZIndex="92" TextWrapping="Wrap" VerticalAlignment="Bottom" FontSize="22" Width="300" FontFamily="FZXiaoBiaoSong-B05" LineHeight="36" LineStackingStrategy="BlockLineHeight" Height="30" Canvas.Left="37" Canvas.Top="439"><Run Language="zh-cn" Text="春日野穹"/></TextBlock>
             <TextBlock x:Name="BO_MainText" HorizontalAlignment="Left" Panel.ZIndex="93" TextWrapping="Wrap" VerticalAlignment="Bottom" Width="935" Height="91" LineHeight="22" FontSize="16" TextDecorations="{x:Null}" FontFamily="FZXiaoBiaoSong-B05" LineStackingStrategy="BlockLineHeight" Canvas.Left="62" Canvas.Top="474"><Run Language="zh-cn" Text="这是一个测试语句块，她很可爱"/><LineBreak/><Run Language="zh-cn" Text="非常长的测试用例句子就是这句话啦啊哈哈哈哈　あけみほうむら"/><LineBreak/><Run Language="zh-cn" Text="穹妹穹妹"/><LineBreak/><Run Language="zh-cn" Text="Sora Cyan"/></TextBlock>
-            <Image Name="BO_MsgTria" Panel.ZIndex="999" Visibility="Hidden" Opacity="0.55" Height="20" Width="20" Canvas.Left="950" Canvas.Top="496" Source="ImageAssets/MessageTria.png"/>
+            <Image Name="BO_MsgTria" Panel.ZIndex="999" Visibility="Hidden" Opacity="0.55" Height="20" Width="20" Canvas.Left="950" Canvas.Top="530" Source="ImageAssets/MessageTria.png"/>
 
             <Image Name="BO_LeftChara" HorizontalAlignment="Left" Height="515" VerticalAlignment="Bottom" Width="500" Stretch="None" Canvas.Left="10" Canvas.Top="61" MouseEnter="BO_LeftChara_MouseEnter" MouseLeave="BO_LeftChara_MouseLeave" MouseDown="BO_LeftChara_MouseDown" MouseUp="BO_LeftChara_MouseUp"/>
             <Image Name="BO_RightChara" HorizontalAlignment="Right" Height="515" VerticalAlignment="Bottom" Width="500" Stretch="None" Canvas.Left="508" Canvas.Top="61"/>
@@ -31,6 +31,7 @@
             <Button Content="Button" Canvas.Left="674" Canvas.Top="59" Width="75" Click="Button_Click_14"/>
             <Slider Canvas.Left="10" Canvas.Top="33" Width="235" Maximum="1000" Value="999" ValueChanged="Slider_ValueChanged"/>
             <Slider Canvas.Top="59" Width="235" Canvas.Left="10" Maximum="1" Minimum="-1" ValueChanged="Slider_ValueChanged_1"/>
+            <Button Content="Button" Canvas.Left="487" Canvas.Top="33" Width="75" Click="Button_Click_15"/>
 
 
 
