--- a/Lyyneheym/Lyyneheym/MainWindow.xaml
+++ b/Lyyneheym/Lyyneheym/MainWindow.xaml
@@ -4,11 +4,10 @@
         xmlns:transitionalsControls="clr-namespace:Transitionals.Controls;assembly=Transitionals"
         Title="MainWindow" Height="608" Width="1024" MouseDown="Window_MouseDown" MouseUp="Window_MouseUp" Closing="Window_Closing" KeyDown="Window_KeyDown" KeyUp="Window_KeyUp" MouseWheel="Window_MouseWheel" SizeChanged="window_SizeChanged" StateChanged="window_StateChanged" PreviewKeyDown="window_PreviewKeyDown" PreviewKeyUp="window_PreviewKeyUp">
     <Viewbox x:Name="viewbox" Stretch="UniformToFill">
-    <Canvas Name="BO_MainGrid" Width="1024" Height="576" Background="Black">
-      <transitionalsControls:TransitionElement x:Name="TransitionBox" Transition="{Binding}" Width="{Binding ActualWidth, ElementName=BO_MainGrid, Mode=OneWay}" Height="{Binding ActualHeight, ElementName=BO_MainGrid, Mode=OneWay}"/>
-      <Button Visibility="Hidden" Panel.ZIndex="9999" Content="Button" HorizontalAlignment="Left" Margin="594,5,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click_7"/>
-					  <Button x:Name="button1" Content="LOAD" Width="75" Canvas.Left="171" Canvas.Top="58" Click="button1_Click"/>
-						<Button x:Name="button" Content="SAVE" HorizontalAlignment="Left" Margin="70,58,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
-    </Canvas>
+			<Canvas Name="BO_MainGrid" Width="1024" Height="576" Background="Black">
+        <transitionalsControls:TransitionElement x:Name="TransitionBox" Transition="{Binding}" Width="{Binding ActualWidth, ElementName=BO_MainGrid, Mode=OneWay}" Height="{Binding ActualHeight, ElementName=BO_MainGrid, Mode=OneWay}" Canvas.Left="0" Canvas.Top="0" Panel.ZIndex="1"/>
+        <Button x:Name="button1" Content="LOAD" Width="75" Canvas.Left="171" Canvas.Top="58" Click="button1_Click"/>
+				<Button x:Name="button" Content="SAVE" HorizontalAlignment="Left" Margin="70,58,0,0" VerticalAlignment="Top" Width="75" Click="button_Click"/>
+			</Canvas>
     </Viewbox>
 </Window>
