--- a/Lyyneheym/Lyyneheym/MainWindow.xaml
+++ b/Lyyneheym/Lyyneheym/MainWindow.xaml
@@ -5,14 +5,18 @@
         Title="MainWindow" Height="608" Width="1024" MouseDown="Window_MouseDown" MouseUp="Window_MouseUp" Closing="Window_Closing" KeyDown="Window_KeyDown" KeyUp="Window_KeyUp" MouseWheel="Window_MouseWheel" SizeChanged="window_SizeChanged" StateChanged="window_StateChanged" PreviewKeyDown="window_PreviewKeyDown" PreviewKeyUp="window_PreviewKeyUp" Background="White">
   <Viewbox x:Name="viewbox" Stretch="UniformToFill" Width="{Binding ElementName=window, Mode=OneWay}" Height="{Binding ElementName=window, Mode=OneWay}">
     <Canvas Name="BO_MainGrid" Width="{Binding ElementName=viewbox, Mode=OneWay}" Height="{Binding ElementName=viewbox, Mode=OneWay}" Background="Black">
-      <Viewbox x:Name="BO_Bg_Viewbox" Stretch="UniformToFill" Width="{Binding ElementName=window, Mode=OneWay}" Height="{Binding ElementName=window, Mode=OneWay}">
-        <Canvas x:Name="BO_Bg_Canvas"/>
+      <Viewbox x:Name="BO_Bg_Viewbox" Stretch="UniformToFill" Width="{Binding ElementName=window, Mode=OneWay}" Height="{Binding ElementName=window, Mode=OneWay}" Canvas.Left="0" Canvas.Top="0">
+        <Canvas x:Name="BO_Bg_Canvas">
+          <transitionalsControls:TransitionElement x:Name="TransitionBox" Transition="{Binding}" Width="{Binding ActualWidth, ElementName=BO_MainGrid, Mode=OneWay}" Height="{Binding ActualHeight, ElementName=BO_MainGrid, Mode=OneWay}" Canvas.Left="0" Canvas.Top="0" Panel.ZIndex="1"/>
+        </Canvas>
       </Viewbox>
-      <Viewbox x:Name="BO_Cstand_Viewbox" Stretch="UniformToFill" Width="{Binding ElementName=window, Mode=OneWay}" Height="{Binding ElementName=window, Mode=OneWay}">
+      <Viewbox x:Name="BO_Cstand_Viewbox" Stretch="UniformToFill" Width="{Binding ElementName=window, Mode=OneWay}" Height="{Binding ElementName=window, Mode=OneWay}" Canvas.Left="0" Canvas.Top="0">
         <Canvas x:Name="BO_Cstand_Canvas"/>
       </Viewbox>
-
-      <transitionalsControls:TransitionElement x:Name="TransitionBox" Transition="{Binding}" Width="{Binding ActualWidth, ElementName=BO_MainGrid, Mode=OneWay}" Height="{Binding ActualHeight, ElementName=BO_MainGrid, Mode=OneWay}" Canvas.Left="0" Canvas.Top="0" Panel.ZIndex="1"/>
+      <Viewbox x:Name="BO_Pics_Viewbox" Stretch="UniformToFill" Width="{Binding ElementName=window, Mode=OneWay}" Height="{Binding ElementName=window, Mode=OneWay}" Canvas.Left="0" Canvas.Top="0">
+        <Canvas x:Name="BO_Pics_Canvas"/>
+      </Viewbox>
+      <Button x:Name="button4" Content="TEST XX" Width="75" Canvas.Left="150" Canvas.Top="10" Click="button4_Click"/>
       <Button x:Name="button3" Content="TEST" Width="75" Canvas.Left="90" Canvas.Top="10" Click="button3_Click"	/>
       <Button x:Name="button2" Content="TEST" Width="75" Canvas.Left="10" Canvas.Top="10" Click="button2_Click"	/>
       <Button x:Name="button1" Content="LOAD" Width="75" Canvas.Left="171" Canvas.Top="58" Click="button1_Click"/>
