--- a/Lyyneheym/Lyyneheym/App.xaml
+++ b/Lyyneheym/Lyyneheym/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="Yuri.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="MainWindow.xaml">
+             StartupUri="NavWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
