--- a/Lyyneheym/Lyyneheym/PageView/StagePage.xaml
+++ b/Lyyneheym/Lyyneheym/PageView/StagePage.xaml
@@ -10,7 +10,7 @@
       d:DesignHeight="720" d:DesignWidth="1280"
       Title="StagePage" ShowsNavigationUI="False"
 			MouseDown="Window_MouseDown" MouseUp="Window_MouseUp" KeyDown="Window_KeyDown" KeyUp="Window_KeyUp" MouseWheel="Window_MouseWheel" Background="White">
-  <Canvas Name="BO_MainGrid" Background="Black">
+  <Canvas Name="BO_MainGrid" Background="Black" Left="0" Top="0">
     <!-- Background, Character, Pictures -->
     <Viewbox x:Name="BO_Bg_Viewbox" Stretch="UniformToFill" Width="{Binding ElementName=mainStagePage, Mode=OneWay}" Height="{Binding ElementName=mainStagePage, Mode=OneWay}" Canvas.Left="0" Canvas.Top="0">
       <Canvas x:Name="BO_Bg_Canvas">
